[tool.poetry]
name = "salam"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
jinja2 = "^3.1.2"
uvicorn = {extras = ["standart"], version = "^0.22.0"}
pytest = "^7.4.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
